@@ -81,26 +81,13 @@ class ProjectShellEnv extends JShellEnvironment {
 
     @Override
     public JShell.Builder customizeJShell(JShell.Builder b) {
-        Collection<String> exportMods = ShellProjectUtils.findProjectImportedModules(getProject(), 
-            ShellProjectUtils.findProjectModules(getProject(), null)
-        );
+        b = super.customizeJShell(b);
         JavaPlatform pl = ShellProjectUtils.findPlatform(getProject());
-        boolean modular = false;
-        if (pl != null) {
-            Specification plSpec = pl.getSpecification();
-            SpecificationVersion jvmversion = plSpec.getVersion();
-            if (jvmversion.compareTo(new SpecificationVersion("9")) >= 0) {
-                modular = true;
-            }
-        }
-        if (exportMods.isEmpty() || !modular) {
+        if (!ShellProjectUtils.isModularJDK(pl)) {
             return b;
         }
         List<String> addReads = new ArrayList<>();
-        for (String mod : exportMods) {
-            addReads.add("-XaddReads:" + mod + "=ALL-UNNAMED"); // NOI18N
-        }
-        addReads.add("-XaddReads:java.jshell=ALL-UNNAMED");
+        addReads.add("--add-reads:java.jshell=ALL-UNNAMED");
         return b.remoteVMOptions(addReads.toArray(new String[addReads.size()]));
     }
     
